[gd_scene load_steps=28 format=3 uid="uid://bwwcqh1wpnuek"]

[ext_resource type="Script" uid="uid://bsxddjqulsn04" path="res://entities/enemy/enemy.gd" id="1_ksmh7"]
[ext_resource type="Texture2D" uid="uid://sldslk36xk7a" path="res://assets/ground_shadow.png" id="2_3fvr7"]
[ext_resource type="Script" uid="uid://bxhoopvbe5vjn" path="res://components/MovementStrategy/strategies/null_movement.gd" id="2_d50e0"]
[ext_resource type="Script" uid="uid://dns32ebcdy0sd" path="res://components/AttackStrategy/strategies/null_attack_strategy.gd" id="3_61ikd"]
[ext_resource type="Texture2D" uid="uid://buj6l6piprcul" path="res://entities/enemy/assets/vita.png" id="3_dt443"]
[ext_resource type="Script" uid="uid://deho6lgc8wgao" path="res://components/Hurtbox2D/Hurtbox2D.gd" id="4_7vrfk"]
[ext_resource type="Script" uid="uid://dpkqn4kijbwpl" path="res://entities/scripts/animation_player.gd" id="4_dt443"]
[ext_resource type="Script" uid="uid://dos8o4pn7ud4q" path="res://entities/enemy/states/state_machine.gd" id="7_eaj7m"]
[ext_resource type="Script" uid="uid://chi6b1auv487w" path="res://entities/enemy/states/wander.gd" id="8_a8fs5"]
[ext_resource type="Script" uid="uid://mfcjg2j383qc" path="res://entities/enemy/states/chase.gd" id="9_eaj7m"]
[ext_resource type="Script" uid="uid://b2rdy8rwohlf2" path="res://components/StatComponent/HealthComponent/HealthComponent.gd" id="10_a8fs5"]
[ext_resource type="Script" uid="uid://bihe40jl8dy0" path="res://entities/enemy/states/hitstun.gd" id="12_4ohlc"]

[sub_resource type="Resource" id="Resource_721x4"]
script = ExtResource("2_d50e0")
metadata/_custom_type_script = "uid://bxhoopvbe5vjn"

[sub_resource type="Resource" id="Resource_eaj7m"]
script = ExtResource("3_61ikd")
metadata/_custom_type_script = "uid://dns32ebcdy0sd"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ohlc"]
size = Vector2(17, 19)

[sub_resource type="CircleShape2D" id="CircleShape2D_a8fs5"]
radius = 65.0

[sub_resource type="Animation" id="Animation_dt443"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_ogeq8"]
resource_name = "death_left"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 1.0]
}

[sub_resource type="Animation" id="Animation_jfjhj"]
resource_name = "death_right"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 1.0]
}

[sub_resource type="Animation" id="Animation_aqotc"]
resource_name = "hurt_left"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [14, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_4wwj3"]
resource_name = "idle_left"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19999999, 0.39999998, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3fvr7"]
resource_name = "idle_right"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19999999, 0.39999998, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_61ikd"]
resource_name = "walk_left"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_d50e0"]
resource_name = "walk_right"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_4ohlc"]
resource_name = "hurt_right"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [14, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4wwj3"]
_data = {
&"RESET": SubResource("Animation_dt443"),
&"death_left": SubResource("Animation_ogeq8"),
&"death_right": SubResource("Animation_jfjhj"),
&"hurt_left": SubResource("Animation_aqotc"),
&"hurt_right": SubResource("Animation_4ohlc"),
&"idle_left": SubResource("Animation_4wwj3"),
&"idle_right": SubResource("Animation_3fvr7"),
&"walk_left": SubResource("Animation_61ikd"),
&"walk_right": SubResource("Animation_d50e0")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3fvr7"]
size = Vector2(11, 8)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_ksmh7")
movement_controller = SubResource("Resource_721x4")
starting_attack = SubResource("Resource_eaj7m")

[node name="Hurtbox2D" type="Area2D" parent="." node_paths=PackedStringArray("health")]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 2
script = ExtResource("4_7vrfk")
health = NodePath("HealthComponent")
iframes_seconds = 0.25
metadata/_custom_type_script = "uid://deho6lgc8wgao"

[node name="HealthComponent" type="Node" parent="Hurtbox2D"]
script = ExtResource("10_a8fs5")
max_value = 10.0
metadata/_custom_type_script = "uid://b2rdy8rwohlf2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox2D"]
position = Vector2(-0.5, -1.5)
shape = SubResource("RectangleShape2D_4ohlc")
debug_color = Color(0.91764706, 0, 0.7019608, 0.24313726)

[node name="PlayerChaseArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerChaseArea"]
shape = SubResource("CircleShape2D_a8fs5")
debug_color = Color(0.5764706, 0.5529412, 0, 0.13333334)

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 6.5)
texture = ExtResource("2_3fvr7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -2)
texture = ExtResource("3_dt443")
hframes = 24

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D" node_paths=PackedStringArray("body")]
root_node = NodePath("../../Shadow")
libraries = {
&"": SubResource("AnimationLibrary_4wwj3")
}
autoplay = "idle_right"
script = ExtResource("4_dt443")
body = NodePath("../..")

[node name="PhysicsCollider" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_3fvr7")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "controlled_node")]
unique_name_in_owner = true
script = ExtResource("7_eaj7m")
initial_state = NodePath("Wander")
controlled_node = NodePath("..")
metadata/_custom_type_script = "uid://bnuyec0xe7i0k"

[node name="Wander" type="Node" parent="StateMachine" node_paths=PackedStringArray("wander_marker")]
script = ExtResource("8_a8fs5")
wander_speed = 70.0
wander_marker = NodePath("WanderTarget")
state_name = &"wander"
metadata/_custom_type_script = "uid://xmr3p4wrraye"

[node name="WanderTarget" type="Marker2D" parent="StateMachine/Wander"]

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource("9_eaj7m")
state_name = &"chase"
metadata/_custom_type_script = "uid://xmr3p4wrraye"

[node name="Hitstun" type="Node" parent="StateMachine"]
script = ExtResource("12_4ohlc")
hitstun_time = 0.3
state_name = &"hitstun"
metadata/_custom_type_script = "uid://xmr3p4wrraye"

[connection signal="damaged" from="Hurtbox2D/HealthComponent" to="Sprite2D/AnimationPlayer" method="_on_damaged"]
[connection signal="damaged" from="Hurtbox2D/HealthComponent" to="StateMachine" method="_on_health_damaged"]
[connection signal="died" from="Hurtbox2D/HealthComponent" to="." method="_on_die"]
[connection signal="died" from="Hurtbox2D/HealthComponent" to="Sprite2D/AnimationPlayer" method="_on_death"]
[connection signal="body_entered" from="PlayerChaseArea" to="StateMachine" method="_on_player_chase_body_entered"]
[connection signal="body_exited" from="PlayerChaseArea" to="StateMachine" method="_on_player_chase_body_exited"]
[connection signal="death_anim_finished" from="Sprite2D/AnimationPlayer" to="." method="_on_death_anim_finished"]
[connection signal="hurt_anim_finished" from="Sprite2D/AnimationPlayer" to="StateMachine/Hitstun" method="_on_hurt_animation_finished"]
